--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,93 +1,22 @@
-<!--&lt;!&ndash; Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html &ndash;&gt;-->
-<!--<idea-plugin>-->
-<!--    &lt;!&ndash; Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. &ndash;&gt;-->
-<!--    <id>com.example.gnums_plugin</id>-->
-
-<!--    &lt;!&ndash; Public plugin name should be written in Title Case.-->
-<!--         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name &ndash;&gt;-->
-<!--    <name>Gnums_plugin</name>-->
-
-<!--    &lt;!&ndash; A displayed Vendor name or Organization ID displayed on the Plugins Page. &ndash;&gt;-->
-<!--    <vendor email="support@yourcompany.com" url="https://www.yourcompany.com">YourCompany</vendor>-->
-
-<!--    &lt;!&ndash; Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.-->
-<!--         Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.-->
-<!--         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description &ndash;&gt;-->
-<!--    <description><![CDATA[-->
-<!--    Enter short description for your plugin here.<br>-->
-<!--    <em>most HTML tags may be used</em>-->
-<!--  ]]></description>-->
-
-<!--    &lt;!&ndash; Product and plugin compatibility requirements.-->
-<!--         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html &ndash;&gt;-->
-<!--    <depends>com.intellij.modules.platform</depends>-->
-
-<!--    &lt;!&ndash; Extension points defined by the plugin.-->
-<!--         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html &ndash;&gt;-->
-<!--    <extensions defaultExtensionNs="com.intellij">-->
-
-<!--    </extensions>-->
 <!--</idea-plugin>-->
 <idea-plugin>
     <id>com.gnwebsoft.gnw</id>
     <name>GNW File Generator</name>
-    <version>1.0</version>
+    <version>1.0.2</version>
     <vendor email="divyank.gnwebsoft@example.com" url="https://gitlab.com/divyankraja/gnw_plugin">GNWebsoft</vendor>
     <description>Generates GNW structure files for Flutter projects.</description>
-    <depends>com.intellij.modules.lang</depends>
+    <depends>com.intellij.modules.platform</depends>
     <!-- Write plugin actions -->
     <actions>
         <!-- Add your actions here -->
-        <action id="com.xdd.NewGetX" class="action.NewGetXAction" text="GNW File" description="Create template code"
+        <action id="com.xdd.NewGetX" class="action.NewGNWAction" text="GNW File" description="Create template code"
                 icon="/images/ic_gnums_launcher-1.png">
-            <add-to-group group-id="NewGroup" anchor="before" relative-to-action="com.xdd.NewGetX"/>
+            <add-to-group group-id="NewGroup" anchor="first"/>
         </action>
-<!--        <group id="MyIdeaDemo.HelloAction" text="MyIdeaDemo" description="Demo for testing">-->
-<!--            <add-to-group group-id="MainMenu" anchor="last"/>-->
-<!--            <action class="action.NewGetXAction" id="MyIdeaDemo.Action.HelloAction" text="Say Hello"></action>-->
-<!--        </group>-->
     </actions>
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- application level-->
         <applicationService serviceImplementation="helper.DataService"/>
-        <applicationConfigurable parentId="tools"
-                                 instance="setting.SettingsConfigurable"
-                                 id="SettingsConfigurable"
-                                 displayName="GetX Setting"/>
-    </extensions>
-
-    <!--  https://plugins.jetbrains.com/docs/intellij/template-support.html#completing-the-live-template-implementation  -->
-    <extensions defaultExtensionNs="com.intellij">
-        <defaultLiveTemplates file="liveTemplates/getX.xml"/>
-        <liveTemplateContext implementation="live_templates.GetXContext" contextId="FLUTTER"/>
-    </extensions>
-
-    <extensions defaultExtensionNs="com.intellij">
-        <!--Obx Action-->
-<!--        <intentionAction>-->
-<!--            <className>intention_action.WrapWithObxAction</className>-->
-<!--            <category>GetX</category>-->
-<!--        </intentionAction>-->
-        <!--GetBuilder Action-->
-<!--        <intentionAction>-->
-<!--            <className>intention_action.WrapWithGetBuilderAction</className>-->
-<!--            <category>GetX</category>-->
-<!--        </intentionAction>-->
-        <!--Observer Action-->
-<!--        <intentionAction>-->
-<!--            <className>intention_action.WrapWithObserverAction</className>-->
-<!--            <category>GetX</category>-->
-<!--        </intentionAction>-->
-        <!--GetBuilder(Auto Dispose) Action-->
-<!--        <intentionAction>-->
-<!--            <className>intention_action.WrapWithGetBuilderAutoDisposeAction</className>-->
-<!--            <category>GetX</category>-->
-<!--        </intentionAction>-->
-        <!--GetX Action-->
-<!--        <intentionAction>-->
-<!--            <className>intention_action.WrapWithGetXAction</className>-->
-<!--            <category>GetX</category>-->
-<!--        </intentionAction>-->
     </extensions>
 </idea-plugin>
